[package]
name = "poker-client"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.31"
egui = "0.31"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25.6"

poker-model = { path = "../poker-model"}
database-handler = { path = "../database-handler" }